components/mail-server/cutover/ingress-user.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mail-user
  namespace: mail-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  ingressClassName: traefik
  tls:
    - secretName: mail-hub-tls
      hosts:
        - mail.shanginn.io
  rules:
    - host: mail.shanginn.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stalwart
                port:
                  name: http
